--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ opencv_python~=4.11.0.86
 pandas~=2.2.3
 openpyxl~=3.1.5
 pymongo~=4.12.0
+tqdm~=4.67.1
+sentence-transformers~=4.1.0
+scikit-learn~=1.6.1
