--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,14 @@
 [MULTI_LLM]
-HOST = http://localhost:11434/api/generate
-MODEL = llava:13b-v1.6-vicuna-q8_0
+HOST = http://172.16.61.73:11434/api/generate
+MODEL = llava:34b-v1.6-fp16
 TEMP = 0.8
-PROMPT = Describe briefly the picture, with no further text.
+PROMPT = Describe very briefly.
 
 
 [TEXT_LLM]
 HOST = http://localhost:11434/api/generate
-MODEL = qwen2.5:14b-instruct-q8_0
+MODEL = llama3:8b-instruct-q8_0
 TEMP = 0.8
-SYSTEM = Extract only beliefs (without other text), and single-word (possible other words as additional belief arguments), related to an agent
-         from the text of a scene, for example: The car runs on the highway —→ AGENT(CAR), RUNNING(CAR), PLACE(CAR, HIGHWAY)
+SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: [LIST]. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
 
 
