+integrating agent's meta-reasoning

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 HOST = http://172.16.61.73:11434/api/generate
 MODEL = llava:34b-v1.6-fp16
 TEMP = 0.8
-PROMPT = Describe very briefly.
+SYSTEM = Describe very briefly.
 
 
 [TEXT_LLM]
