+integrating agent's meta-reasoning

--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,7 @@ TEMP = 0.8
 SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: [LIST]. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
 
 
+[INFERENCE]
+IMAGES_PATH = DIPA_TEST
+# 0a6bc386b28f2aac_diff.jpg, 0a7c597abf1e90d4_diff.jpg
+IMAGES_LIST = 00a0ab30f64c0096_diff.jpg
