+integrating agent's meta-reasoning

--- a/config.ini
+++ b/config.ini
@@ -15,4 +15,4 @@ SYSTEM = In the following description, answer with a single boolean TRUE or FALS
 [INFERENCE]
 IMAGES_PATH = DIPA_TEST
 # 0a6bc386b28f2aac_diff.jpg, 0a7c597abf1e90d4_diff.jpg
-IMAGES_LIST = 0a6bc386b28f2aac_diff.jpg
+IMAGES_LIST = 0a7c597abf1e90d4_diff.jpg
