--- a/config.ini
+++ b/config.ini
@@ -14,5 +14,5 @@ SYSTEM = In the following description, answer with a single boolean TRUE or FALS
 
 [INFERENCE]
 IMAGES_PATH = DIPA_TEST
-# 0a6bc386b28f2aac_diff.jpg, 0a7c597abf1e90d4_diff.jpg
+# e.g. 0a6bc386b28f2aac_diff.jpg, 0a7c597abf1e90d4_diff.jpg
 IMAGES_LIST = 0a7c597abf1e90d4_diff.jpg
