--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,17 @@
 [MULTI_LLM]
-HOST = http://172.16.61.73:11434/api/generate
-MODEL = llava:34b-v1.6-fp16
+HOST = http://localhost:11434/api/generate
+MODEL = llama3.2-vision:11b-instruct-q8_0
 TEMP = 0.8
 SYSTEM = Describe very briefly.
 
 
 [TEXT_LLM]
-HOST = http://localhost:11434/api/generate
-MODEL = llama3:8b-instruct-q8_0
+HOST = http://172.16.61.73:11434/api/generate
+# localhost: qwen2.5:14b-instruct-q8_0, llama3:8b-instruct-q8_0,
+# 172.16.61.73: llama3.3:70b-instruct-fp16
+MODEL = llama3.3:70b-instruct-fp16
 TEMP = 0.8
-SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: [LIST]. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
+SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: {privacy_threatening_list}. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
 
 
 [INFERENCE]
