--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [MULTI_LLM]
 HOST = http://localhost:11434/api/generate
-MODEL = llama3.2-vision:11b-instruct-q8_0
+# llama3.2-vision:11b-instruct-q8_0
+MODEL = llava:13b-v1.5-q6_K
 TEMP = 0.8
 SYSTEM = Describe very briefly.
 
