--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,24 @@
+[DATABASE]
+# with credentials: mongodb://root:example@localhost:27017/
+NOSQL_CONN = mongodb://localhost:27017/
+NOSQL_DB = dipa
+NOSQL_COLLECTION = annotations_collection
+VECT_DB = inferences/image_descriptions_t08_34b_brief.db
+
+
 [MULTI_LLM]
 HOST = http://localhost:11434/api/generate
-# llama3.2-vision:11b-instruct-q8_0
-MODEL = llava:13b-v1.5-q6_K
+# llama3.2-vision:11b-instruct-q8_0, llava:13b-v1.5-q6_K
+MODEL = llama3.2-vision:11b-instruct-q8_0
 TEMP = 0.8
 SYSTEM = Describe very briefly.
 
 
 [TEXT_LLM]
 HOST = http://172.16.61.73:11434/api/generate
-# localhost: qwen2.5:14b-instruct-q8_0, llama3:8b-instruct-q8_0,
-# 172.16.61.73: llama3.3:70b-instruct-fp16
-MODEL = llama3.3:70b-instruct-fp16
+# localhost: qwen2.5:14b-instruct-q8_0, llama3:8b-instruct-q8_0
+# 172.16.61.73: llama3.3:70b-instruct-fp16, llama4:17b-scout-16e-instruct-q8_0, qwen2.5:72b-instruct-fp16
+MODEL = llama4:17b-scout-16e-instruct-q8_0
 TEMP = 0.8
 SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: {privacy_threatening_list}. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
 
