--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,8 @@ HOST = http://172.16.61.73:11434/api/generate
 # 172.16.61.73: llama3.3:70b-instruct-fp16, llama4:17b-scout-16e-instruct-q8_0, qwen2.5:72b-instruct-fp16
 MODEL = qwen2.5:72b-instruct-fp16
 TEMP = 0.8
-SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: {privacy_threatening_list}. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
+SYSTEM = In the following description, answer with a single boolean TRUE or FALSE, weather or not you found items (or similar) from the following privacy-threating list: [LIST]. The boolean must be followed by the number of found items (e.g TRUE 2). Report also which items you found.
+
 
 
 [INFERENCE]
